--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ dbus-python==1.2.18
 defer==1.0.6
 distro==1.7.0
 distro-info===1.1build1
+dj-database-url==2.0.0
 Django==4.1.9
 django-cors-headers==4.0.0
 djangorestframework==3.14.0
@@ -64,6 +65,7 @@ paramiko==2.9.3
 pexpect==4.8.0
 Pillow==9.0.1
 protobuf==3.12.4
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pycairo==1.20.1
 pycups==2.0.1
@@ -110,6 +112,7 @@ wadllib==1.3.6
 watchdog==2.3.1
 websocket-client==1.5.1
 websockets==10.4
+whitenoise==6.4.0
 xdg==5
 xkit==0.0.0
 yarl==1.9.2
